<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeetingFormActivity"
    android:background="@color/white"
    android:id="@+id/meeting_form">


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="@dimen/back_button_size"
        android:layout_height="@dimen/back_button_size"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_back"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="#00000000"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:text="Ajouter une réunion"
        android:textSize="@dimen/form_title_size"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/topicET"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:textSize="@dimen/edit_text_text_size"
        android:hint="Sujet"
        android:textColorHint="@color/gray"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="24dp"
        android:background="@color/lightGray"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="10dp"
        android:maxLines="1"
        android:textColor="@color/black"
        android:inputType="text"/>

    <EditText
        android:id="@+id/participantET"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/edit_text_height"
        android:layout_below="@id/topicET"
        android:textSize="@dimen/edit_text_text_size"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/addParticipantButton"
        android:hint="Entrer un mail"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:background="@color/lightGray"
        android:layout_marginStart="20dp"
        android:paddingStart="10dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/addParticipantButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/edit_text_height"
        android:layout_below="@id/topicET"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/edit_text_text_size"
        android:textColor="@color/white"
        android:text="+"
        android:background="@color/blue"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/participantsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addParticipantButton"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/edit_text_text_size"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/chooseDateButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_button_size"
        android:layout_below="@id/participantsTV"
        android:text="Choisir une date"
        android:textSize="@dimen/edit_text_text_size"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_marginTop="8dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_button_size"
        android:layout_below="@id/chooseDateButton"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:gravity="center"/>


    <Button
        android:id="@+id/validateMeetingButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_button_size"
        android:layout_below="@id/spinner"
        android:text="Valider la réunion"
        android:textSize="@dimen/edit_text_text_size"
        android:background="@color/green"
        android:textColor="@color/white"
        android:layout_marginTop="16dp" />

</RelativeLayout>
