...
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_above="@id/addButton"
        android:layout_marginTop="30dp"
        android:background="@color/white"/>


    <LinearLayout
        android:id="@+id/menuLinearLayout"
...
